# agents

search_engine/: .gitignore  RBI_QA.csv  Rag_Flow.html  main.py  pyproject.toml  script.sh
search_engine/config/agents/: agents.yaml
search_engine/config/tasks/: tasks.yaml
search_engine/db/chroma/75337974-5022-4f74-a781-53fd2d625853/: index_metadata.pickle
search_engine/src/flows/: flows.py
search_engine/src/ppeline/: agents.py  tasks.py
search_engine/src/ppeline/config/: agents.yaml  tasks.yaml
search_engine/src/rags/: rag_pipeline.py
search_engine/src/tools/: tools.py
